@@ -61,6 +61,13 @@ void twidget::set_size(const tpoint& origin, const tpoint& size)
 	set_dirty();
 }
 
+SDL_Rect twidget::get_dirty_rect() const
+{
+	return drawing_action_ == DRAWN 
+			? get_screen_rect()
+			: clip_rect_; 
+}
+
 twindow* twidget::get_window()
 {
 	// Go up into the parent tree until we find the top level
@@ -145,5 +152,34 @@ void twidget::set_visible_area(const SDL_Rect& area)
 	}
 }
 
+void twidget::draw_background(surface& frame_buffer)
+{ 
+	if(drawing_action_ == PARTLY_DRAWN) {
+		clip_rect_setter clip(frame_buffer, clip_rect_);
+		impl_draw_background(frame_buffer); 
+	} else {
+		impl_draw_background(frame_buffer); 
+	}
+}
+
+void twidget::draw_children(surface& frame_buffer)
+{ 
+	if(drawing_action_ == PARTLY_DRAWN) {
+		clip_rect_setter clip(frame_buffer, clip_rect_);
+		impl_draw_children(frame_buffer); 
+	} else {
+		impl_draw_children(frame_buffer); 
+	}
+}
+
+void twidget::draw_foreground(surface& frame_buffer) 
+{ 
+	if(drawing_action_ == PARTLY_DRAWN) {
+		clip_rect_setter clip(frame_buffer, clip_rect_);
+		impl_draw_foreground(frame_buffer); 
+	} else {
+		impl_draw_foreground(frame_buffer); 
+	}
+}
 
 } // namespace gui2
